tests/examples/good/misc/good002.lat
int main() {
    if ("aaa" != "aab")
        printInt(42);
    return 0;
}

boolean f() {
    return true;
}