tests/examples/bad/function_call_arg_mismatch.lat
int main() {
    boolean a;
    f(a);
    return 0;
}

int f(int a) {
    return 1;
}